--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "next": "14.2.5",
+    "pdfmake": "^0.2.10",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
